--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@angular/compiler": "~9.0.2",
     "@angular/core": "~9.0.2",
     "@angular/forms": "~9.0.2",
+    "@angular/localize": "^9.0.7",
     "@angular/platform-browser": "~9.0.2",
     "@angular/platform-browser-dynamic": "~9.0.2",
     "@angular/router": "~9.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^6.2.0",
+    "bootstrap": "^4.4.0",
     "firebase": "^8.7.0",
     "flamelink": "^1.0.0-alpha.34",
     "img-comparison-slider": "^7.1.1",
