--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@angular/router": "~9.0.2",
     "@ng-bootstrap/ng-bootstrap": "^6.2.0",
     "bootstrap": "^4.4.0",
+    "daterangepicker": "^3.1.0",
     "firebase": "^8.7.0",
     "flamelink": "^1.0.0-alpha.34",
     "img-comparison-slider": "^7.1.1",
+    "moment": "^2.29.1",
     "rxjs": "~6.5.4",
     "sweetalert2": "^11.0.18",
     "tslib": "^1.10.0",
