--- a/angular.json
+++ b/angular.json
@@ -21,6 +21,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
+              "src/sitemap.xml",
+              "src/robots.txt",
               "src/assets"
             ],
             "styles": [
@@ -85,7 +87,10 @@
             "karmaConfig": "karma.conf.js",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {"glob": "robots.txt", "input": "src/assets", "output": "/"},
+              {"glob": "sitemap.xml", "input": "src/assets", "output": "/"}
+             
             ],
             "styles": [
               "src/styles.css"
